# wedding-slides

./: .clang-format  .gitignore  CMakeLists.txt  build.sh
src/: resize-image.cpp
www/: slides.js  style.css
